--- a/cw-restdemo-project/src/main/resources/application.properties
+++ b/cw-restdemo-project/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+## MySQL schema:cwdb
+spring.datasource.url=jdbc:mysql://localhost:3306/cwdb
+spring.datasource.username=root
+spring.datasource.password=dbarik
+
+#`hibernate_sequence' doesn't exist
+spring.jpa.hibernate.use-new-id-generator-mappings=false
+
+# drop n create table, good for testing, comment this in production
+spring.jpa.hibernate.ddl-auto=update
 
