--- a/cw-demo-project/src/main/resources/application.properties
+++ b/cw-demo-project/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.datasource.password=dbarik
 #`hibernate_sequence' doesn't exist
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 
-# drop n create table, good for testing, comment this in production
+# drop an create table, good for testing, comment this in production
 spring.jpa.hibernate.ddl-auto=update
