--- a/cw-restdemo-project/src/main/resources/application.properties
+++ b/cw-restdemo-project/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.hibernate.use-new-id-generator-mappings=false
 # drop n create table, good for testing, comment this in production
 spring.jpa.hibernate.ddl-auto=update
 
+server.port=8081
+
+spring.application.name=Debashish Sleuth Application2
