--- a/gradle-intellij-ms-application/src/main/resources/application-dev.properties
+++ b/gradle-intellij-ms-application/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 #DEV ENVIRONEMNT SETTING#
-
+server.port=8091
 app.message= This is the property file for the ${spring.application.name} specific to DEV Environment
 
 spring.datasource.driver-class-name=org.h2.Driver
