--- a/springboot-comosdbemu-gradle/src/main/resources/application.properties
+++ b/springboot-comosdbemu-gradle/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# Specify the DNS URI of your Azure Cosmos DB.
+# Specify the DNS URI of your Azure Cosmos DB. https://localhost:8081/_explorer/index.html
 azure.cosmosdb.uri=https://localhost:8081
 
 # Specify the access key for your database.
